# NL-PDDL

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: _quarto.yml  about.qmd  build.sh  index.qmd  install.qmd  viewer.qmd
docs/_assets/: demo_result.txt
examples/: blockworld_tutorial.ipynb  blockworld_tutorial_colab.ipynb  cache.json
files/alfworld_text/: alfworld_text_model.json
files/alfworld_text_with_misalignment/: alfworld_text_with_misalignment_goal.json
files/blockworld/: blockworld_goal.json  blockworld_model.json
files/misalignment_blockworld/: misalignment_blockworld_model.json
files/mystery_blocksworld/: domain.json  goal.json
files/randomized_blockworld/: domain.json  goal.json
pddl_planner/: __init__.py  plan_viewer.py
pddl_planner/llm/: gemma_llm.py  llm.py  llm_with_type.py
pddl_planner/llm/prompts/: __init__.py  entailment.txt  entailment_examples.txt  type_entailment.txt
pddl_planner/logic/: formula.py  nl_formula.py  nl_parser.py  operation.py  parser.py
pddl_planner/pddl_core/: action.py  domain.py  instance.py  nl_domain.py  nl_instance.py
pddl_planner/planner/: nl_planner.py  plan_extractor.py
pddl_planner/scripts/: run_nl_pddl.py
pddl_planner/tests/: count_failing_to_find.py  run_alfworld_text.py  run_alfworld_text_with_misalignment.py  run_blockworld.py  run_misalignment_blockworld.py  run_mystery_blockworld.py  run_randomized_blockworld.py  run_unified.py
validator/alfworld_exp/: README.md  action_prompt_template.txt  action_prompt_template_misalign.txt  actions.py  alfworldtext_domain.json  alfworldtext_domain_original.json  cache.json  event.py  generate_llm_goals.py  goal_example_extractor.py  kb.py  llm.py  llm_baseline.py  nl_goal_llm.json  parser.py  plan.py  regression.py  requirements.txt  run_alfworld_NL.py  run_alfworld_VLM.py  vlm.py  vlm_baseline.py
validator/alfworld_exp/configs/: base_config.yaml
validator/alfworld_exp/regression_agent/: agent_NL.py  agent_base.py  evaluate_regression_gt.py  llm_utils.py  prompt tempate.py
validator/alfworld_exp/regression_agent/plan/: plan.py
validator/block_test_repo/: README.md  initial_state_checker.py  pddl_to_json.py  plan_to_subgoals.py  requirements.txt  run_blockworld_validator.py  summarize_out_pipeline.py  summarize_plan_lengths.py  test_initial_state.py  validate_with_val.py
(+13 files in other folders)
