[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pddl_planner"
version = "0.1"
dependencies = [
  "pddl==0.4.0",
  "openai",
  "pyyaml",
  "opencv-python",
  "pyDatalog",
  "google-genai",
  "python-dotenv",
  # Required by the local Gemma backend (pddl_planner.llm.gemma_llm).
  # transformers >= 4.50 is needed for the Gemma 3 model classes; accelerate
  # powers `device_map=...`; sentencepiece is needed to parse Gemma's
  # SentencePiece tokenizer (otherwise transformers raises a confusing
  # "Couldn't instantiate the backend tokenizer" ValueError).
  "transformers>=4.50",
  "accelerate",
  "sentencepiece"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pddl_planner", "pddl_planner.*"]
exclude = ["img*", "files*"]