[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pddl_planner"
version = "0.1"
dependencies = [
  "pddl==0.4.0",
  "openai",
  "pyyaml",
  "opencv-python",
  "pyDatalog",
  "google-genai",
  "python-dotenv",
  # Local Gemma backend (pddl_planner.llm.gemma_llm). We now load Gemma
  # through Unsloth's FastLanguageModel, which wraps transformers with
  # 4-bit quantization and fused inference kernels. Unsloth transitively
  # pulls in a compatible transformers/accelerate, but we keep them pinned
  # here so `pip install -e .` resolves the full set deterministically.
  # bitsandbytes provides the 4-bit kernels; sentencepiece is still needed
  # to parse Gemma's SentencePiece tokenizer for the fp16 Gemma 3 variants.
  "transformers==5.5.0",
  "accelerate",
  "sentencepiece",
  "bitsandbytes",
  "unsloth"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pddl_planner", "pddl_planner.*"]
exclude = ["img*", "files*"]